--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
       <!-- О нас -->
       <section id="about" class="about">
         <div class="about-container">
-          <span class="about-label">НЕМНОГО<br />О НАС</span>
+          <span class="about-label">КАК МЫ<br />РАБОТАЕМ</span>
           <p class="about-text">
             Зарекомендовали себя на рынке обустройства вашего комфорта лучшими из лучших, это подтверждает наша высокая производительность, качество и множество положительных отзывов. Наша команда служит на страже <span>Вашего комфорта</span>.
           </p>
@@ -94,9 +94,6 @@
               </div>
               <div class="testimonial-item">
                 <img src="{{ url_for('static', filename='images/otziv_4_black.jpg') }}" alt="Отзыв 4" />
-              </div>
-              <div class="testimonial-item">
-                <img src="{{ url_for('static', filename='images/otziv_5_black.jpg') }}" alt="Отзыв 5" />
               </div>
               <div class="testimonial-item">
                 <img src="{{ url_for('static', filename='images/otziv_2_black.jpg') }}" alt="Отзыв 2" />
