--- a/templates/about.html
+++ b/templates/about.html
@@ -54,27 +54,13 @@
 
       <!-- Раздел: Профессиональное озеленение -->
       <h2>Профессиональное озеленение в 2025 году</h2>
-      <p class="abus">С нового сезона, 2025 года, мы начали уже профессионально заниматься:</p>
-      <ul class="centered-list">
-        <li>Озеленением территорий и помещений</li>
-        <li>Благоустройством участков «под ключ»</li>
-        <li>Укладкой тротуарной плитки</li>
-        <li>Посадкой и оформление газонов</li>
-        <li>Разработкой индивидуального ландшафтного дизайна с учетом всех предпочтений</li>
-      </ul>
+      <p class="abus">С нового сезона 2025 года мы начали профессионально заниматься озеленением территорий и помещений, а также, благоустройством участков под ключ, стелить газон, класть тротуарную плитку , высаживать растения, разрабатывать индивидуальный дизайн для клиента, учитывая все его предпочтения.</p>
       <p class="abus">Вам нужно спилить аварийное дерево или возвести забор? Это также к нам!</p>
 
       <!-- Раздел: Сегодня -->
       <h2>Наши услуги сегодня</h2>
-      <p class="abus">Сейчас спектр наших работ постоянно растёт.</p>
-      <p class="abus">Мы выполняем любые задачи, связанные с благоустройством:</p>
-      <ul class="centered-list">
-        <li>Расчистка снега и уборка крыш</li>
-        <li>Уборка и выравнивание участков</li>
-        <li>Озеленение и посадка растений</li>
-        <li>Строительство заборов, укладка плитки</li>
-        <li>Ландшафтный дизайн «под ключ»</li>
-      </ul>
+      <p class="abus">На данный момент наши услуги очень разносторонние, и на сайте вы можете наблюдать, как спектр услуг только увеличивается.</p>
+      <p class="abus">Любые работы, касаемые благоустройства - это к нам!</p>
 
       <!-- Заключительный абзац и кнопка заказа -->
       <div class="welcome-section">
