--- a/templates/about.html
+++ b/templates/about.html
@@ -67,8 +67,8 @@
         <h2><strong>Добро пожаловать в «Садовник»!</strong></h2>
         <p class="welcome">Мы работаем с душой и честностью во всём. Будем рады помочь вам обустроить ваш участок.</p>
       </div>
-      <div class="order-button">
-        <a class="order-link" href="https://wa.me/{{ phone_number }}" target="_blank">Заказать услугу</a>
+      <div class="order-button service-order">
+        <a class="order-link" href="https://wa.me/{{ phone_number }}?text={{ 'Здравствуйте! Пишу по поводу заказа услуги у вас!'|urlencode }}" target="_blank">Заказать услугу</a>
       </div>
     </main>
   </section>
