--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
     </script>
     <!-- Кнопка заказа -->
     <div class="order-button service-order">
-      <a class="order-link" href="https://wa.me/{{ phone_number }}" target="_blank">Заказать услугу</a>
+      <a class="order-link" href="https://wa.me/{{ phone_number }}?text={{ 'Здравствуйте! Пишу по поводу заказа услуги у вас!'|urlencode }}" target="_blank">Заказать услугу</a>
     </div>
     <!-- Футер -->
     <footer class="footer">
