--- a/templates/services.html
+++ b/templates/services.html
@@ -18,6 +18,7 @@
               <li>Измельчение веток</li>
               <li>Утилизация деревьев</li>
             </ul>
+            <p class="service-note">Для работ в наличии автогидроподъемник (автовышка/мех. рука)</p>
           </div>
           <div class="service-image">
             <img src="{{ url_for('static', filename='images/service1.jpg') }}" alt="Кронирование деревьев" />
