--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
 
       <!-- Введение -->
       <p class="abus">
-        <strong>Добрый день!</strong> Меня зовут Сильвестр, и я основатель компании по благоустройству <strong>«Садовник»</strong>.
+        <strong>Добрый день!</strong> Меня зовут Игнат, и я основатель компании по благоустройству <strong>«Садовник»</strong>.
       </p>
       <p class="abus">Дорогой клиент, поскольку для нас главное в работе - честность, расскажу Вам самую честную историю создания нашей компании.</p>
 
